--- a/express/workspace/server/package.json
+++ b/express/workspace/server/package.json
@@ -17,5 +17,8 @@
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-naver-v2": "^2.0.8"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
