--- a/express/workspace/server/package.json
+++ b/express/workspace/server/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
